# soup-tadpole

./: Cargo.toml
.cargo/: config.toml
src/: engine.rs  main.rs  transposition_table.rs
