[package]
name = "soup-tadpole"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
cozy-chess = { version = "0.3.2", features = ["std", "pext"] }
vampirc-uci = "0.11.1"
log = "0.4.18"
simple-logging = "2.0.2"
rayon = "1.7.0"
dashmap = "5.4.0"